first optimizer integration